[gd_scene load_steps=15 format=3 uid="uid://cko2mjeytllpm"]

[ext_resource type="Script" path="res://scripts/forest_area.gd" id="1_sxa32"]
[ext_resource type="PackedScene" uid="uid://cysy4pyvyskw5" path="res://scenes/tile_map1.tscn" id="1_vf7rb"]
[ext_resource type="PackedScene" uid="uid://gg8o35paofyw" path="res://scenes/player.tscn" id="2_xuxtx"]
[ext_resource type="AudioStream" uid="uid://o0w4uuqwdl85" path="res://music/POL-green-town-short.wav" id="4_02gyq"]
[ext_resource type="Script" path="res://scripts/decision_box.gd" id="5_uq8bv"]
[ext_resource type="FontFile" uid="uid://d0ikdbkke0c4o" path="res://fonts/joystix monospace.otf" id="6_qxgpj"]
[ext_resource type="AudioStream" uid="uid://bqf0qxrdt5i3c" path="res://music/countdown-sound-effect-8-bit-151797.mp3" id="7_1dbj2"]

[sub_resource type="Animation" id="Animation_aiceo"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vw7bb"]
_data = {
"fade_in": SubResource("Animation_aiceo")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4ahje"]
radius = 25.0

[sub_resource type="Animation" id="Animation_b7nr5"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VSplitContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uqctg"]
resource_name = "timer"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VSplitContainer/ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 13), Vector2(424, 13)]
}

[sub_resource type="Animation" id="Animation_y35rq"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VSplitContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VSplitContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-130, -150), Vector2(-130, -212)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_or8x6"]
_data = {
"fade_in": SubResource("Animation_y35rq"),
"fade_out": SubResource("Animation_b7nr5"),
"timer": SubResource("Animation_uqctg")
}

[node name="Forest Area" type="Node2D"]
modulate = Color(0.980392, 0.835294, 0.705882, 1)
y_sort_enabled = true
script = ExtResource("1_sxa32")

[node name="TileMap" parent="." instance=ExtResource("1_vf7rb")]
modulate = Color(0.980392, 0.835294, 0.823529, 1)
layer_0/tile_data = PackedInt32Array(0, 524288, 1, 65536, 524288, 1, 65537, 524288, 1, 65538, 524288, 1, 131074, 524288, 1, 131075, 524288, 1, 196612, 589824, 0, 196613, 524288, 1, 262149, 589824, 0, 262150, 786432, 0, 262151, 524288, 1, 327687, 786432, 0, 327688, 786432, 0, 327689, 524288, 1, 393225, 786432, 0, 393226, 720896, 0, 393227, 720896, 0, 393228, 720896, 0, 458764, 786432, 0, 458765, 786432, 0, 458766, 524288, 1, 524302, 786432, 0, 524303, 720896, 0, 524304, 524288, 1, 589840, 720896, 0, 589841, 524288, 0, 589842, 786432, 0, 655379, 720896, 0, 655380, 720896, 0, 655381, 524288, 1, 720917, 524288, 1, 720918, 524288, 1, 786456, 524288, 1, 851992, 524288, 1, 851993, 524288, 1, 917529, 720896, 0, 917530, 524288, 1, 26, 524288, 1, 25, 524288, 1, 24, 1179648, 1, 22, 524288, 1, 21, 524288, 1, 20, 524288, 1, 19, 524288, 1, 18, 524288, 1, 17, 524288, 1, 16, 524288, 0, 15, 524288, 0, 14, 524288, 0, 13, 524288, 0, 12, 720896, 0, 11, 524288, 1, 10, 524288, 1, 9, 524288, 1, 8, 786432, 0, 7, 524288, 1, 6, 524288, 1, 5, 524288, 1, 4, 524288, 1, 3, 524288, 1, 2, 524288, 0, 1, 524288, 1, 131072, 524288, 1, 196608, 524288, 1, 262144, 524288, 1, 327680, 786432, 0, 393216, 524288, 1, 458752, 786432, 0, 458753, 524288, 1, 524289, 786432, 0, 589825, 524288, 1, 655361, 524288, 1, 655360, 524288, 1, 589824, 524288, 1, 524288, 786432, 0, 720896, 524288, 1, 786432, 524288, 1, 851968, 524288, 0, 917504, 524288, 0, 983040, 524288, 0, 1048576, 524288, 0, 1048577, 524288, 0, 1114113, 524288, 0, 1114112, 524288, 1, 1114114, 524288, 0, 1114115, 524288, 0, 1114116, 524288, 0, 1114117, 524288, 0, 1114118, 524288, 0, 1114119, 524288, 1, 1114120, 524288, 1, 1114121, 720896, 0, 1114122, 720896, 0, 1114123, 524288, 1, 1114124, 524288, 1, 1114125, 720896, 0, 1114126, 720896, 0, 1114127, 720896, 0, 1114128, 720896, 0, 1048592, 720896, 0, 1048593, 524288, 1, 1048594, 720896, 0, 1048595, 720896, 0, 1048596, 524288, 0, 1048597, 524288, 0, 1114133, 720896, 0, 1114132, 720896, 0, 1114131, 720896, 0, 1114130, 720896, 0, 1114129, 720896, 0, 1114134, 524288, 1, 1114136, 524288, 0, 1114137, 524288, 0, 1048601, 524288, 0, 1048600, 524288, 1, 1048598, 720896, 0, 1048591, 720896, 0, 1048590, 524288, 1, 1048589, 720896, 0, 1048588, 720896, 0, 1048587, 720896, 0, 1048586, 720896, 0, 1048585, 524288, 1, 1048584, 786432, 0, 1048583, 786432, 0, 1048582, 786432, 0, 1048581, 524288, 1, 1048580, 524288, 1, 1048579, 589824, 0, 1048578, 589824, 0, 983041, 524288, 1, 983042, 524288, 1, 983043, 589824, 0, 917508, 589824, 0, 917509, 524288, 1, 917510, 524288, 1, 917511, 786432, 0, 917512, 786432, 0, 917513, 786432, 0, 917514, 786432, 0, 917515, 720896, 0, 917516, 786432, 0, 917517, 524288, 1, 983053, 720896, 0, 983054, 524288, 1, 983055, 524288, 1, 983056, 720896, 0, 983057, 720896, 0, 983058, 720896, 0, 983059, 720896, 0, 983060, 720896, 0, 983061, 524288, 0, 983064, 720896, 0, 983065, 720896, 0, 983066, 524288, 1, 65562, 524288, 1, 65561, 524288, 1, 65560, 1179648, 1, 65558, 524288, 1, 65557, 589824, 0, 65556, 524288, 1, 65555, 524288, 1, 65554, 524288, 1, 65553, 589824, 0, 65552, 524288, 0, 65551, 524288, 1, 65550, 524288, 1, 65549, 524288, 1, 65548, 720896, 0, 65547, 720896, 0, 65546, 524288, 1, 65545, 524288, 1, 65544, 524288, 1, 65543, 786432, 0, 65542, 786432, 0, 131073, 524288, 1, 196609, 524288, 1, 262145, 786432, 0, 327681, 524288, 1, 393217, 786432, 0, 720897, 524288, 0, 786433, 524288, 0, 851969, 524288, 0, 917505, 524288, 1, 917506, 524288, 1, 917507, 524288, 1, 851971, 524288, 1, 851970, 524288, 1, 786434, 720896, 0, 720898, 786432, 0, 720899, 720896, 0, 655363, 786432, 0, 655362, 524288, 1, 589826, 524288, 1, 524290, 786432, 0, 458754, 524288, 1, 393218, 786432, 0, 327682, 524288, 1, 524291, 524288, 1, 458755, 786432, 0, 393219, 524288, 1, 327683, 786432, 0, 262147, 786432, 0, 196611, 786432, 0, 589827, 524288, 1, 262146, 786432, 0, 196610, 524288, 1, 1179650, 524288, 1, 1179651, 524288, 1, 786435, 524288, 1, 851972, 524288, 1, 786436, 524288, 1, 983044, 524288, 1, 1179648, 524288, 1, 1179649, 524288, 1, 1179652, 524288, 1, 1179653, 524288, 0, 1179654, 524288, 0, 1179655, 524288, 1, 1179656, 524288, 1, 1179657, 720896, 0, 1179658, 524288, 1, 1179659, 524288, 1, 1179660, 524288, 1, 1179661, 524288, 1, 1179662, 524288, 1, 1179663, 524288, 1, 1179664, 524288, 1, 1179665, 524288, 1, 1179666, 720896, 0, 1179667, 524288, 1, 1179668, 524288, 1, 1179669, 524288, 0, 1179670, 524288, 0, 1179672, 524288, 1, 1179673, 524288, 1, 1179674, 524288, 1, 1179675, 524288, 1, 1179676, 524288, 1, 1179677, 524288, 1, 1179678, 524288, 1, 1179679, 524288, 1, 786458, 524288, 1, 851994, 524288, 1, 720922, 524288, 1, 786457, 524288, 1, 917528, 524288, 1, 720921, 524288, 1, 655385, 524288, 1, 589850, 524288, 1, 524314, 524288, 1, 458778, 524288, 1, 589849, 524288, 1, 655384, 1179648, 1, 720920, 524288, 1, 851990, 720896, 0, 655386, 524288, 1, 589848, 1179648, 1, 524312, 1179648, 1, 458777, 524288, 1, 393242, 524288, 1, 524313, 524288, 1, 786453, 524288, 1, 851989, 720896, 0, 917524, 720896, 0, 917523, 524288, 1, 851988, 524288, 1, 786452, 524288, 1, 589846, 524288, 1, 458776, 1179648, 1, 655382, 524288, 1, 851987, 524288, 1, 917522, 524288, 1, 917521, 720896, 0, 786454, 524288, 1, 917520, 524288, 1, 917519, 720896, 0, 917518, 720896, 0, 983050, 786432, 0, 983049, 786432, 0, 983048, 786432, 0, 983047, 786432, 0, 983046, 524288, 1, 983045, 524288, 1, 983051, 720896, 0, 983052, 524288, 1, 917525, 524288, 1, 851986, 720896, 0, 851985, 524288, 1, 851984, 720896, 0, 851983, 720896, 0, 851982, 786432, 0, 851981, 786432, 0, 851980, 589824, 0, 851979, 786432, 0, 851978, 524288, 1, 851977, 524288, 1, 851976, 786432, 0, 851975, 524288, 1, 851974, 524288, 1, 851973, 589824, 0, 786437, 524288, 1, 786438, 589824, 0, 786439, 589824, 0, 786440, 589824, 0, 786441, 524288, 1, 786442, 524288, 1, 786443, 589824, 0, 786444, 589824, 0, 786445, 720896, 0, 786446, 524288, 1, 786447, 720896, 0, 786448, 524288, 1, 786449, 720896, 0, 786450, 524288, 1, 786451, 720896, 0, 720916, 720896, 0, 720915, 524288, 1, 720914, 720896, 0, 720913, 524288, 1, 720912, 720896, 0, 720911, 524288, 1, 720910, 524288, 0, 720909, 524288, 0, 720908, 786432, 0, 720907, 589824, 0, 720906, 589824, 0, 720905, 786432, 0, 720904, 524288, 1, 720903, 524288, 1, 720900, 720896, 0, 720901, 720896, 0, 720902, 524288, 1, 655378, 524288, 1, 655377, 524288, 0, 655376, 524288, 0, 655375, 524288, 0, 655374, 720896, 0, 655373, 786432, 0, 655372, 524288, 1, 655371, 786432, 0, 655370, 524288, 1, 655369, 589824, 0, 655368, 720896, 0, 655367, 720896, 0, 655366, 720896, 0, 655365, 720896, 0, 655364, 720896, 0, 524292, 524288, 1, 524293, 786432, 0, 524294, 786432, 0, 524295, 589824, 0, 524296, 720896, 0, 524297, 720896, 0, 524298, 786432, 0, 589835, 720896, 0, 589836, 720896, 0, 589837, 720896, 0, 589838, 720896, 0, 589839, 720896, 0, 589843, 524288, 1, 589844, 720896, 0, 589845, 720896, 0, 589834, 720896, 0, 589833, 720896, 0, 589832, 589824, 0, 589831, 720896, 0, 589830, 720896, 0, 589829, 786432, 0, 589828, 786432, 0, 524299, 524288, 1, 524300, 524288, 1, 524301, 524288, 1, 524305, 524288, 1, 524306, 786432, 0, 524307, 524288, 1, 524308, 524288, 1, 524309, 524288, 1, 524310, 524288, 1, 458774, 524288, 1, 458773, 524288, 1, 458772, 524288, 1, 458771, 786432, 0, 458770, 524288, 1, 458769, 524288, 1, 458768, 720896, 0, 458767, 786432, 0, 458763, 786432, 0, 458762, 720896, 0, 458761, 720896, 0, 458760, 786432, 0, 458759, 786432, 0, 458758, 589824, 0, 458757, 524288, 1, 458756, 786432, 0, 393220, 524288, 1, 393221, 786432, 0, 393222, 589824, 0, 393223, 524288, 1, 393224, 524288, 1, 393229, 524288, 1, 393230, 786432, 0, 393231, 786432, 0, 393232, 786432, 0, 393233, 720896, 0, 393234, 524288, 1, 393235, 589824, 0, 393236, 589824, 0, 393237, 524288, 1, 393238, 524288, 1, 393240, 1179648, 1, 393241, 524288, 1, 327706, 524288, 1, 327705, 524288, 1, 327704, 1179648, 1, 327702, 524288, 1, 327701, 589824, 0, 327700, 589824, 0, 327699, 589824, 0, 327698, 589824, 0, 327697, 720896, 0, 327696, 524288, 1, 327695, 524288, 1, 327694, 720896, 0, 327693, 720896, 0, 327692, 786432, 0, 327691, 720896, 0, 327690, 524288, 1, 327686, 524288, 1, 327685, 589824, 0, 327684, 786432, 0, 262148, 786432, 0, 262152, 524288, 1, 262153, 786432, 0, 196618, 524288, 1, 196619, 524288, 1, 196620, 524288, 1, 196621, 720896, 0, 196622, 786432, 0, 196623, 786432, 0, 196624, 786432, 0, 196625, 786432, 0, 196626, 589824, 0, 196627, 524288, 1, 196628, 524288, 1, 196629, 589824, 0, 196630, 524288, 1, 196632, 1179648, 1, 196633, 524288, 1, 196634, 524288, 1, 262170, 524288, 1, 262169, 524288, 1, 262168, 1179648, 1, 262166, 524288, 1, 262165, 589824, 0, 262164, 524288, 1, 262163, 524288, 1, 262162, 589824, 0, 262161, 786432, 0, 262160, 524288, 1, 262159, 720896, 0, 262158, 720896, 0, 262157, 524288, 1, 262156, 720896, 0, 262155, 786432, 0, 262154, 786432, 0, 196614, 786432, 0, 196615, 786432, 0, 196616, 786432, 0, 196617, 786432, 0, 131098, 524288, 1, 131097, 524288, 1, 131096, 1179648, 1, 131094, 524288, 1, 131093, 589824, 0, 131092, 524288, 1, 131091, 524288, 1, 131090, 524288, 1, 131089, 589824, 0, 131088, 524288, 1, 131087, 524288, 1, 131086, 524288, 1, 131085, 720896, 0, 131084, 524288, 1, 131083, 720896, 0, 131082, 524288, 1, 131081, 524288, 1, 131080, 524288, 1, 131079, 524288, 1, 131078, 524288, 1, 131077, 786432, 0, 131076, 786432, 0, 917526, 524288, 0, 983062, 720896, 0, 1179671, 524288, 0, 1114135, 524288, 0, 1048599, 720896, 0, 983063, 720896, 0, 917527, 524288, 1, 851991, 720896, 0, 786455, 524288, 1, 720919, 524288, 1, 655383, 524288, 1, 589847, 524288, 1, 524311, 524288, 1, 458775, 524288, 1, 393239, 524288, 1, 327703, 524288, 1, 262167, 524288, 1, 196631, 524288, 1, 131095, 524288, 1, 65559, 524288, 1, 23, 524288, 1, 65539, 524288, 0, 65540, 524288, 1, 65541, 524288, 1)
layer_1/tile_data = PackedInt32Array(393239, 1114112, 1, 327703, 1114112, 1, 262167, 1114112, 1, 196631, 1114112, 1, 131095, 1114112, 1, 720919, 1114112, 2, 655383, 1114112, 1, 720921, 1245184, 2, 655385, 1245184, 1, 589849, 1245184, 1, 524313, 1245184, 1, 458777, 1245184, 1, 393241, 1245184, 1, 327705, 1245184, 1, 262169, 1245184, 1, 196633, 1245184, 1, 131097, 1245184, 1, 23, 1114112, 1, 65561, 1245184, 1, 25, 1245184, 1, 65559, 1114112, 1, 458775, 1114112, 1, 524311, 1114112, 1, 589847, 1114112, 1, 720920, 1179648, 2)
layer_2/tile_data = PackedInt32Array(983066, 1179648, 1, 917530, 1179648, 1, 851994, 1507328, 1, 786458, 1507328, 1, 720922, 1507328, 1, 655386, 1507328, 1, 589850, 1507328, 1, 524314, 1507328, 1, 458778, 1507328, 1, 393242, 1507328, 1, 327706, 1507328, 1, 262170, 1507328, 1, 196634, 1507328, 1, 131098, 1507328, 1, 983067, 1179648, 1, 917531, 1179648, 1, 851995, 1572864, 1, 786459, 1572864, 1, 720923, 1572864, 1, 655387, 1572864, 1, 589851, 1572864, 1, 524315, 1572864, 1, 458779, 1572864, 1, 393243, 1572864, 1, 327707, 1572864, 1, 262171, 1572864, 1, 196635, 1572864, 1, 131099, 1572864, 1, 131100, 1572864, 1, 196636, 1572864, 1, 262172, 1572864, 1, 327708, 1572864, 1, 393244, 1572864, 1, 458780, 1572864, 1, 524316, 1572864, 1, 589852, 1572864, 1, 655388, 1572864, 1, 720924, 1572864, 1, 786460, 1572864, 1, 851996, 1572864, 1, 917532, 1179648, 1, 983068, 1179648, 1, 983069, 1179648, 1, 917533, 1179648, 1, 851997, 1179648, 1, 786461, 1572864, 1, 720925, 1572864, 1, 655389, 1572864, 1, 589853, 1572864, 1, 524317, 1572864, 1, 458781, 1572864, 1, 393245, 1572864, 1, 327709, 1572864, 1, 262173, 1572864, 1, 196637, 1572864, 1, 131101, 1572864, 1, 131103, 1572864, 1, 196639, 1572864, 1, 262175, 1572864, 1, 327711, 1572864, 1, 393247, 1572864, 1, 458783, 1572864, 1, 524319, 1572864, 1, 589855, 1572864, 1, 655391, 1572864, 1, 720927, 1572864, 1, 786463, 1179648, 1, 851998, 1179648, 1, 917534, 1179648, 1, 983070, 1179648, 1, 1114143, 1572864, 1, 1048607, 1572864, 1, 983071, 1179648, 1, 917535, 1179648, 1, 851999, 1179648, 1, 786462, 1572864, 1, 720926, 1572864, 1, 655390, 1572864, 1, 589854, 1572864, 1, 524318, 1572864, 1, 458782, 1572864, 1, 393246, 1572864, 1, 327710, 1572864, 1, 262174, 1572864, 1, 196638, 1572864, 1, 131102, 1572864, 1, 65567, 1572864, 1, 31, 1572864, 1, 30, 1572864, 1, 65566, 1572864, 1, 65565, 1572864, 1, 29, 1572864, 1, 28, 1572864, 1, 65564, 1572864, 1, 65563, 1572864, 1, 27, 1572864, 1, 65562, 1507328, 1, 26, 1507328, 1)
layer_3/tile_data = PackedInt32Array(11, 0, 5, 983063, 0, 5, 983059, 0, 5, 983055, 0, 5, 983050, 0, 5, 262148, 0, 5, 655380, 0, 5, 524304, 0, 5, 196627, 0, 5, 131086, 0, 5, 589824, 0, 5, 1048576, 0, 5, 65536, 0, 5, 131080, 0, 5, 458755, 0, 5, 262160, 0, 5, 1048582, 0, 5, 786434, 0, 5, 458759, 0, 5, 393227, 0, 5, 720908, 0, 5, 720902, 65536, 0, 1114143, 131072, 12, 1114142, 65536, 12, 1114140, 65536, 12, 1114139, 65536, 12, 1114138, 0, 12, 1114141, 65536, 12, 1048603, 65536, 11, 983068, 65536, 11, 983069, 65536, 11, 983070, 65536, 11, 983071, 65536, 11, 851997, 0, 9, 917532, 65536, 9, 917533, 262144, 10, 851998, 65536, 9, 786463, 0, 9, 851999, 262144, 10, 720925, 65536, 10, 983066, 0, 11, 983067, 65536, 11, 917530, 0, 9, 917531, 65536, 9, 786462, 196608, 9, 851996, 196608, 9)

[node name="player" parent="." instance=ExtResource("2_xuxtx")]
modulate = Color(0.980392, 0.835294, 0.705882, 1)
y_sort_enabled = true
position = Vector2(392, 11)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-1, 0, 419, 0, 418, 304, 0, 304, 0, 1, -2, 0, -60, 306, 362, 321, 587, 300, 557, -50, 33, -35)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Overlay" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vw7bb")
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_02gyq")
volume_db = -5.0

[node name="chest" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest"]
position = Vector2(104, 189)
shape = SubResource("CircleShape2D_4ahje")

[node name="decision_box" type="Control" parent="."]
visible = false
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
script = ExtResource("5_uq8bv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="decision_box"]
libraries = {
"": SubResource("AnimationLibrary_or8x6")
}

[node name="VSplitContainer" type="VSplitContainer" parent="decision_box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -212.0
offset_right = 294.0
offset_bottom = -4.99994
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="decision_box/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 13.2

[node name="choice1" type="Button" parent="decision_box/VSplitContainer/HSplitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_qxgpj")
text = "choice number 1"

[node name="choice2" type="Button" parent="decision_box/VSplitContainer/HSplitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_qxgpj")
text = "choice number 2"

[node name="ColorRect" type="ColorRect" parent="decision_box/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="cam" type="Camera2D" parent="decision_box/VSplitContainer"]
position = Vector2(212, 120)
scale = Vector2(2, 2)
zoom = Vector2(4, 4)

[node name="Countdown" type="AudioStreamPlayer" parent="decision_box"]
stream = ExtResource("7_1dbj2")

[node name="Timer" type="Timer" parent="decision_box"]
wait_time = 3.0

[node name="CameraReset" type="Timer" parent="."]
wait_time = 10.0

[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="body_entered" from="chest" to="." method="_on_chest_body_entered"]
[connection signal="animation_finished" from="decision_box/AnimationPlayer" to="decision_box" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="decision_box/Timer" to="decision_box" method="_on_timer_timeout"]
[connection signal="timeout" from="CameraReset" to="." method="_on_camera_reset_timeout"]
